#ifndef GUEST_H
#define GUEST_H

#include "Person.hpp"

class Guest : public Person
{
private:
public:
};

#endif // GUEST_H