#ifndef PERSON_H
#define PERSON_H

#include <string>

class Person
{
private:
    const std::string id_;

    //need a status
public:
        //need a constructor that takes a string
};

#endif // PERSON_H