class party
{
public:
private:
}